syntax = "proto3";

package vixen.parser.token;

message PublicKey {
  bytes value = 1;
}

enum AuthorityType {
  MINT_TOKENS = 0;
  FREEZE_ACCOUNT = 1;
  ACCOUNT_OWNER = 2;
  CLOSE_ACCOUNT = 3;
}

// ── Account state ──────────────────────────────────────────────────

message Mint {
  optional PublicKey mint_authority = 1;
  uint64 supply = 2;
  uint32 decimals = 3;
  bool is_initialized = 4;
  optional PublicKey freeze_authority = 5;
}

message TokenAccount {
  PublicKey mint = 1;
  PublicKey owner = 2;
  uint64 amount = 3;
  optional PublicKey delegate = 4;
  uint32 state = 5;
  uint64 delegated_amount = 6;
  optional uint64 is_native = 7;
  optional PublicKey close_authority = 8;
}

message Multisig {
  uint32 m = 1;
  uint32 n = 2;
  bool is_initialized = 3;
  repeated PublicKey signers = 4;
}

message TokenProgramState {
  oneof state {
    TokenAccount token_account = 1;
    Mint mint = 2;
    Multisig multisig = 3;
  }
}

// ── Instruction accounts ───────────────────────────────────────────

message TransferAccounts {
  PublicKey source = 1;
  PublicKey destination = 2;
  PublicKey owner = 3;
  repeated PublicKey multisig_signers = 4;
}

message InitializeMintAccounts {
  PublicKey mint = 1;
}

message InitializeAccountAccounts {
  PublicKey account = 1;
  PublicKey mint = 2;
  PublicKey owner = 3;
}

message InitializeAccount2Accounts {
  PublicKey account = 1;
  PublicKey mint = 2;
}

message InitializeMultisigAccounts {
  PublicKey multisig = 1;
  repeated PublicKey signers = 2;
}

message ApproveAccounts {
  PublicKey source = 1;
  PublicKey delegate = 2;
  PublicKey owner = 3;
  repeated PublicKey multisig_signers = 4;
}

message RevokeAccounts {
  PublicKey source = 1;
  PublicKey owner = 2;
  repeated PublicKey multisig_signers = 3;
}

message SetAuthorityAccounts {
  PublicKey current_authority = 1;
  PublicKey account = 2;
  repeated PublicKey multisig_signers = 3;
}

message MintToAccounts {
  PublicKey mint = 1;
  PublicKey account = 2;
  PublicKey mint_authority = 3;
  repeated PublicKey multisig_signers = 4;
}

message BurnAccounts {
  PublicKey account = 1;
  PublicKey mint = 2;
  PublicKey owner = 3;
  repeated PublicKey multisig_signers = 4;
}

message CloseAccountAccounts {
  PublicKey account = 1;
  PublicKey destination = 2;
  PublicKey owner = 3;
  repeated PublicKey multisig_signers = 4;
}

message FreezeAccountAccounts {
  PublicKey account = 1;
  PublicKey mint = 2;
  PublicKey mint_freeze_authority = 3;
  repeated PublicKey multisig_signers = 4;
}

message ThawAccountAccounts {
  PublicKey account = 1;
  PublicKey mint = 2;
  PublicKey mint_freeze_authority = 3;
  repeated PublicKey multisig_signers = 4;
}

message TransferCheckedAccounts {
  PublicKey source = 1;
  PublicKey mint = 2;
  PublicKey destination = 3;
  PublicKey owner = 4;
  repeated PublicKey multisig_signers = 5;
}

message ApproveCheckedAccounts {
  PublicKey source = 1;
  PublicKey mint = 2;
  PublicKey delegate = 3;
  PublicKey owner = 4;
  repeated PublicKey multisig_signers = 5;
}

message MintToCheckedAccounts {
  PublicKey mint = 1;
  PublicKey account = 2;
  PublicKey mint_authority = 3;
  repeated PublicKey multisig_signers = 4;
}

message BurnCheckedAccounts {
  PublicKey account = 1;
  PublicKey mint = 2;
  PublicKey owner = 3;
  repeated PublicKey multisig_signers = 4;
}

message SyncNativeAccounts {
  PublicKey account = 1;
}

message GetAccountDataSizeAccounts {
  PublicKey mint = 1;
}

message InitializeImmutableOwnerAccounts {
  PublicKey account = 1;
}

message AmountToUiAmountAccounts {
  PublicKey mint = 1;
}

message UiAmountToAmountAccounts {
  PublicKey mint = 1;
}

// ── Instruction args ───────────────────────────────────────────────

message TransferArgs {
  uint64 amount = 1;
}

message InitializeMintArgs {
  uint32 decimals = 1;
  PublicKey mint_authority = 2;
  optional PublicKey freeze_authority = 3;
}

message InitializeAccount2Args {
  PublicKey owner = 1;
}

message InitializeMultisigArgs {
  uint32 m = 1;
}

message ApproveArgs {
  uint64 amount = 1;
}

message SetAuthorityArgs {
  AuthorityType authority_type = 1;
  optional PublicKey new_authority = 2;
}

message MintToArgs {
  uint64 amount = 1;
}

message BurnArgs {
  uint64 amount = 1;
}

message TransferCheckedArgs {
  uint64 amount = 1;
  uint32 decimals = 2;
}

message ApproveCheckedArgs {
  uint64 amount = 1;
  uint32 decimals = 2;
}

message MintToCheckedArgs {
  uint64 amount = 1;
  uint32 decimals = 2;
}

message BurnCheckedArgs {
  uint64 amount = 1;
  uint32 decimals = 2;
}

message AmountToUiAmountArgs {
  uint64 amount = 1;
}

message UiAmountToAmountArgs {
  string ui_amount = 1;
}

// ── Instruction wrappers ───────────────────────────────────────────

message TransferInstruction {
  TransferAccounts accounts = 1;
  TransferArgs args = 2;
}

message InitializeMintInstruction {
  InitializeMintAccounts accounts = 1;
  InitializeMintArgs args = 2;
}

message InitializeAccountInstruction {
  InitializeAccountAccounts accounts = 1;
}

message InitializeAccount2Instruction {
  InitializeAccount2Accounts accounts = 1;
  InitializeAccount2Args args = 2;
}

message InitializeAccount3Instruction {
  InitializeAccount2Accounts accounts = 1;
  InitializeAccount2Args args = 2;
}

message InitializeMultisigInstruction {
  InitializeMultisigAccounts accounts = 1;
  InitializeMultisigArgs args = 2;
}

message ApproveInstruction {
  ApproveAccounts accounts = 1;
  ApproveArgs args = 2;
}

message RevokeInstruction {
  RevokeAccounts accounts = 1;
}

message SetAuthorityInstruction {
  SetAuthorityAccounts accounts = 1;
  SetAuthorityArgs args = 2;
}

message MintToInstruction {
  MintToAccounts accounts = 1;
  MintToArgs args = 2;
}

message BurnInstruction {
  BurnAccounts accounts = 1;
  BurnArgs args = 2;
}

message CloseAccountInstruction {
  CloseAccountAccounts accounts = 1;
}

message FreezeAccountInstruction {
  FreezeAccountAccounts accounts = 1;
}

message ThawAccountInstruction {
  ThawAccountAccounts accounts = 1;
}

message TransferCheckedInstruction {
  TransferCheckedAccounts accounts = 1;
  TransferCheckedArgs args = 2;
}

message ApproveCheckedInstruction {
  ApproveCheckedAccounts accounts = 1;
  ApproveCheckedArgs args = 2;
}

message MintToCheckedInstruction {
  MintToCheckedAccounts accounts = 1;
  MintToCheckedArgs args = 2;
}

message BurnCheckedInstruction {
  BurnCheckedAccounts accounts = 1;
  BurnCheckedArgs args = 2;
}

message SyncNativeInstruction {
  SyncNativeAccounts accounts = 1;
}

message GetAccountDataSizeInstruction {
  GetAccountDataSizeAccounts accounts = 1;
}

message InitializeImmutableOwnerInstruction {
  InitializeImmutableOwnerAccounts accounts = 1;
}

message AmountToUiAmountInstruction {
  AmountToUiAmountAccounts accounts = 1;
  AmountToUiAmountArgs args = 2;
}

message UiAmountToAmountInstruction {
  UiAmountToAmountAccounts accounts = 1;
  UiAmountToAmountArgs args = 2;
}

// ── Dispatch ───────────────────────────────────────────────────────

message TokenProgram {
  oneof instruction {
    TransferInstruction transfer = 1;
    InitializeMintInstruction initialize_mint = 2;
    InitializeAccountInstruction initialize_account = 3;
    InitializeAccount2Instruction initialize_account2 = 4;
    InitializeAccount3Instruction initialize_account3 = 5;
    InitializeMultisigInstruction initialize_multisig = 6;
    ApproveInstruction approve = 7;
    RevokeInstruction revoke = 8;
    SetAuthorityInstruction set_authority = 9;
    MintToInstruction mint_to = 10;
    BurnInstruction burn = 11;
    CloseAccountInstruction close_account = 12;
    FreezeAccountInstruction freeze_account = 13;
    ThawAccountInstruction thaw_account = 14;
    TransferCheckedInstruction transfer_checked = 15;
    ApproveCheckedInstruction approve_checked = 16;
    MintToCheckedInstruction mint_to_checked = 17;
    BurnCheckedInstruction burn_checked = 18;
    SyncNativeInstruction sync_native = 19;
    GetAccountDataSizeInstruction get_account_data_size = 20;
    InitializeImmutableOwnerInstruction initialize_immutable_owner = 21;
    AmountToUiAmountInstruction amount_to_ui_amount = 22;
    UiAmountToAmountInstruction ui_amount_to_amount = 23;
  }
}
